--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,6 @@ repos:
     hooks:
     -   id: mypy
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: 5.0.9
+    rev: 'v5.0.9'
     hooks:
     -   id: isort
