--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,11 @@ services:
       POSTGRES_DB: "pyfeedrss"
     ports:
       - "5432:5432"
-
+  redis:
+    image: redis
+    command: redis-server
+    ports:
+      - "6379:6379"
 volumes:
   data_postgres:
     driver: local
