fix: removing docs from precommit

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ exclude =
   \.mypy_cache
   \.pytest_cache
   \.venv
+  \docs
 
 [isort]
 multi_line_output = 3
@@ -31,6 +32,7 @@ exclude ="""
        |\.mypy_cache
        |\.pytest_cache
        |\.venv
+       |\.docs
     )/
     )
   """
