feature: updating ignore

--- a/.gitignore
+++ b/.gitignore
@@ -103,9 +103,6 @@ celerybeat.pid
 
 # Environments
 .env
-.env.dev
-.env.prod
-.env.db.prod
 .venv
 env/
 venv/
@@ -133,3 +130,6 @@ dmypy.json
 
 #Jetbrains
 .idea/
+!/.env.db.prod
+!/.env.prod
+!/.env.dev
