--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,13 @@ services:
       POSTGRES_DB: "pyfeedrss"
     ports:
       - "5432:5432"
+
   redis:
     image: redis
     command: redis-server
     ports:
       - "6379:6379"
+
   rabbitmq:
     image: rabbitmq:3-management
     ports:
@@ -24,6 +26,35 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=pyfeed
       - RABBITMQ_DEFAULT_PASS=pyfeed
+
+  worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: sh -c "./wait-for.sh rabbitmq:5672 -- python manage.py rundramatiq --settings=pyfeedrss.settings.local"
+    env_file:
+      - ./.env.dev
+    links:
+      - postgres
+      - rabbitmq
+    depends_on:
+      - postgres
+      - rabbitmq
+
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    command: sh -c "./wait-for.sh postgres:5432 -- python manage.py runserver 0.0.0.0:8000 --settings=pyfeedrss.settings.local"
+    env_file:
+      - ./.env.dev
+    links:
+      - postgres
+    depends_on:
+      - postgres
+
 volumes:
   data_postgres:
     driver: local
