--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
   - "3.7"
 install:
   - pip install -r requirements/dev.txt
-script:
-  - pytest
 services:
   - postgresql
+script:
+  - pytest -xv --cov=app --cov-report term-missingD
+after_success:
+  - coveralls
